[package]
name = "plasma-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-program = "2.0.24"
solana-sdk = "2.0.24"
jupiter-amm-interface = "0.4.5"
spl-token = { version = "6", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "5.0.1", features = [
    "no-entrypoint",
] }
borsh = "0.10.0"
fixed = "1.27.0"
bytemuck = { version = "1.14.3", features = ["derive"] }
anyhow = "1.0.79"
bincode = "1.3.3"

[dev-dependencies]
solana-program-test = "2.0.24"
solana-client = "2.0.24"
solana-account-decoder = "2.0.24"
ahash = "0.8.11"
