[package]
name = "plasma-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-program = "2.2.1"
solana-sdk = "2.2.1"

borsh = ">=1.5.0"
fixed = "1.27.0"
bytemuck = { version = "1.14.3", features = ["derive"] }
anyhow = "1.0.79"
bincode = "1.3.3"

[dev-dependencies]
solana-program-test = "2.2.1"
solana-client = "2.2.1"
solana-account-decoder = "2.2.1"
ahash = "0.8.11"
